--- a/landing-page-with-features/style.css
+++ b/landing-page-with-features/style.css
@@ -9,7 +9,8 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover; 
-    height: 100vh; 
+    height: 100vh;
+    font-family: 'Inter', sans-serif;
 }
 
 header p {
@@ -24,7 +25,7 @@ header p {
     color: white;
     font-size: 60px;
     text-align: center;
-    margin-top: 3.5rem;
+    margin-top: 3.0rem;
 }
 
 .container2 {
